--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,4 +16,6 @@ jobs:
         run: npm install
       - name: Check Style
         run: npm run eslint
+      - name: Check tests
+        run: npm run test
         
