Try to fix playwright github action build

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
+    "start-build": "npm run build && npm run start-prod",
     "test": "jest",
     "e2e-test": "playwright test",
     "e2e-test:report": "playwright show-report",
