--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -4,17 +4,20 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize]
 
-jobs: 
+jobs:
   hello_world_job:
     runs-on: ubuntu-20.04
     steps:
       - name: Say hello
-        run: | 
+        run: |
           echo "Hello World!"
       - name: Output directory
-        run: | 
+        run: |
           ls
       - name: Output date
-        run: | 
+        run: |
           date
